address keyserver not reachable issue

--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -10,6 +10,10 @@ RUN apt-get update \
         && rm -rf /var/lib/apt/lists/*
 
 # grab gosu for easy step-down from root
+#In case you got error "?: ha.pool.sks-keyservers.net: Network is unreachable"
+#gpgkeys: HTTP fetch error 7: couldn't connect: Network is unreachable
+#use following url for the keyserver
+#RUN gpg --keyserver hkp://ha.pool.sks-keyservers.net:80 --recv-keys B42F6819007F00F88E364FD4036A9C25BF357DD4
 RUN gpg --keyserver ha.pool.sks-keyservers.net --recv-keys B42F6819007F00F88E364FD4036A9C25BF357DD4
 RUN curl -o /usr/local/bin/gosu -SL "https://github.com/tianon/gosu/releases/download/1.2/gosu-$(dpkg --print-architecture)" \
         && curl -o /usr/local/bin/gosu.asc -SL "https://github.com/tianon/gosu/releases/download/1.2/gosu-$(dpkg --print-architecture).asc" \
@@ -17,6 +21,10 @@ RUN curl -o /usr/local/bin/gosu -SL "https://github.com/tianon/gosu/releases/dow
         && rm /usr/local/bin/gosu.asc \
         && chmod +x /usr/local/bin/gosu
 
+#In case you got error "?: ha.pool.sks-keyservers.net: Network is unreachable"
+#gpgkeys: HTTP fetch error 7: couldn't connect: Network is unreachable
+#use following url for the keyserver
+#RUN gpg --keyserver hkp://ha.pool.sks-keyservers.net:80 --recv-keys CEA1E18DDA77EF4E67884FF2A6982D0160456C5A
 RUN gpg --keyserver ha.pool.sks-keyservers.net --recv-keys CEA1E18DDA77EF4E67884FF2A6982D0160456C5A
 
 ENV MONGO_VERSION 2.4.14
